# pydocmate

./: .env.local.example  .gitignore  README.md  example.py  package.json  tsconfig.json
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py  start.sh
backend/server/: app.py  st_run_python_documentation.py
backend/src/pydocass/: __init__.py
backend/src/pydocass/components/: __init__.py  maybe_add_class_to_typing_import.py  write_arguments_annotations.py  write_comments.py  write_docstrings.py
backend/src/pydocass/connection/: __init__.py  database.py  submit_record.py
backend/src/pydocass/core/: __init__.py  document_python_code.py
backend/src/pydocass/scripts/: __init__.py  run_document.py
backend/src/pydocass/utils/: align_argument_defaults.py  constants.py  prompts.py  utils.py
backend/src/pydocass/utils/indentation/: __init__.py  align_indentation.py  detect_indentation.py
backend/tests/: __init__.py  test_document_python_code.py  test_potentially_add_class_to_typing_import.py
components/: CodeBlock.tsx  ModelSelect.tsx  TextBlock.tsx
docker/: README.md  docker-compose.yml  restart.sh
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: README.md
frontend/: next.config.js  package-lock.json
frontend/components/: APIKeyInput.tsx  CodeBlock.module.css  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  ModelSelect.tsx  ThemeSwitcher.module.css  ThemeSwitcher.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: Home.module.css  (+1 more)
pages/: _app.tsx  _document.tsx
(+3 files in other folders)
