[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocass"
version = "0.0.1"
description = "Python Document Assistant"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "pydocass team"}
]

dependencies = [
    "openai==1.58.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "streamlit==1.39.0",
    "transformers==4.50.0",
    "psycopg2-binary==2.9.10",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "black==25.1.0",
    "anthropic==0.49.0",
    "instructor==1.7.7",
]

[project.scripts]
pydoc = "pydocass.scripts.run_document:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 
